--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -513,7 +513,7 @@ Parameters:
     Default: Decline
   ReleaseVersion:
     Type: String
-    Description: Select a CyberArk official release version.
+    Description: Select an official CyberArk PAS release version.
     AllowedValues:
       - '12.2'
       - '12.1'
@@ -625,7 +625,7 @@ Metadata:
       EULA:
         default: License Agreement
       ReleaseVersion:
-        default: CyberArk Release Version
+        default: CyberArk PAS Release Version
       WinVersion:
         defualt: Windows Server Version
       KeyName:
