--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -236,6 +236,7 @@ Resources:
     Properties:
       Roles:
         - !Ref ComponentInstanceRole
+    DeletionPolicy: Retain
   StorePasswordLambda:
     Type: 'AWS::Lambda::Function'
     Properties:
@@ -889,7 +890,7 @@ Parameters:
     Default: Decline
   ReleaseVersion:
     Type: String
-    Description: Select a CyberArk official release version.
+    Description: Select an official CyberArk PAS release version.
     AllowedValues:
       - '12.2'
       - '12.1'
@@ -1010,7 +1011,7 @@ Metadata:
       EULA:
         default: License Agreement
       ReleaseVersion:
-        default: CyberArk Release Version
+        default: CyberArk PAS Release Version
       WinVersion:
         default: Windows Server Version
       KeyName:
