update to m5 - works in all supported regions

--- a/aws/PTA-Single-Deployment.yaml
+++ b/aws/PTA-Single-Deployment.yaml
@@ -359,9 +359,9 @@ Parameters:
     Type: String
     Description: Select the instance type of the PTA instance.
     AllowedValues:
-      - m6i.2xlarge
-      - m6i.4xlarge
-    Default: m6i.2xlarge
+      - m5.2xlarge
+      - m5.4xlarge
+    Default: m5.2xlarge
   PTAInstanceSecurityGroups:
     Type: 'List<AWS::EC2::SecurityGroup::Id>'
     Description: Assign Security Groups to the PTA instance.
