--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -119,7 +119,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: !Ref ReleaseVersion
-      Component: "vault"
+      Component: "Vault"
       OS: !Ref WinVersion
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
@@ -129,7 +129,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: !Ref ReleaseVersion
-      Component: "pvwa"
+      Component: "PVWA"
       OS: !Ref WinVersion
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
@@ -139,7 +139,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: !Ref ReleaseVersion
-      Component: "cpm"
+      Component: "CPM"
       OS: !Ref WinVersion
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
@@ -149,7 +149,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: !Ref ReleaseVersion
-      Component: "psm"
+      Component: "PSM"
       OS: !Ref WinVersion
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
@@ -159,8 +159,8 @@ Resources:
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: !Ref ReleaseVersion
-      Component: "psmp"
-      OS: "Amazon-Linux-2"
+      Component: "PSM SSH Proxy"
+      OS: "RHEL-8"
       OwnerAccountId: !Ref CyberarkAccountId
     DependsOn:
       - LambdaDeployRole
@@ -755,11 +755,13 @@ Resources:
           import boto3
           import cfnresponse
           import json
+          import re
           import traceback
 
 
           def handler(event, context):
             try:
+              component = event['ResourceProperties']['Component']
               pas_ver= event['ResourceProperties']['Version']
               pas_ver_major= int(pas_ver.split(".")[0])
               pas_ver_minor= int(pas_ver.split(".")[1])
@@ -768,17 +770,17 @@ Resources:
               }
 
               pas_ver_without_os_filter = ['11.5','11.6','11.7','12.0','12.1']
-              os_filter = {} if pas_ver in pas_ver_without_os_filter else \
-              {'Name': 'tag:os', 'Values': [event['ResourceProperties']['OS']]}
+              os_filter = '' if pas_ver in pas_ver_without_os_filter else \
+              event['ResourceProperties']['OS']
               
               while (response['Images'] == []) and (pas_ver_major >= 0):
                 while (response['Images'] == []) and (pas_ver_minor >= 0):
+                  ami_name = 'CyberArk PAS ' + component + ' v'+str(pas_ver_major) + '.' + str(pas_ver_minor) +'*'+ os_filter
                   response = boto3.client('ec2').describe_images(
                       Owners= [event['ResourceProperties']['OwnerAccountId']],
                       Filters=[
-                        {'Name': 'tag:Cyberark_version', 'Values':  [str(pas_ver_major)+'.'+str(pas_ver_minor)]},
-                        {'Name': 'tag:component', 'Values': [event['ResourceProperties']['Component']]},
-                        os_filter,
+                        {'Name': 'Name', 'Values':  [ami_name]},
+                      ],
                       ],
                   )
                   pas_ver_minor -= 1
