--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1253,29 +1253,34 @@ Resources:
               mode: '000444'
               owner: root
               group: root
+            /etc/awslogs/install.sh:
+              content: !Sub |
+                #!/bin/bash
+                curl https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O
+                chmod +x ./awslogs-agent-setup.py
+                ./awslogs-agent-setup.py -n -r ${AWS::Region} -c /etc/awslogs/awslogs.conf
+              mode: '000555'
+              owner: root
+              group: root
           commands:
-            01_create_state_directory:
+            01_install_awslogs:
+              command: /etc/awslogs/install.sh
+            02_create_state_directory:
               command: mkdir -p /var/lib/awslogs/state
-            02_start_awslogsd:
-              command: systemctl start awslogsd
-            03_enable_awslogsd:
-              command: systemctl enable awslogsd
+            03_start_awslogsd:
+              command: service awslogs start
         install_psmp:
           commands:
-            01-CreateCredFile:
-              command: !Sub >-
-                sudo /opt/CARKpsmp/bin/createcredfile /root/CD-Image/user.cred
-                Password -Username Administrator -Password ${VaultAdminPassword} -EntropyFile
-            02-PSMPdeploy:
+            01-PSMPdeploy:
               command:
                 'Fn::Sub':
                   - >-
-                    /root/CD-Image/register_and_activation.sh
-                    /root/CD-Image/user.cred ${VaultIpAddress} $(curl
-                    http://169.254.169.254/latest/meta-data/instance-id) y
+                    /opt/CD-Image/register_and_activation.sh
+                    Administrator "${VaultAdminPassword}" "${VaultIpAddress}" $(curl
+                    http://169.254.169.254/latest/meta-data/instance-id) ec2-user
                   - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
-            03-PostInstall:
-              command: sudo rm -rf /root/CD-Image/
+            02-PostInstall:
+              command: sudo rm -rf /opt/CD-Image/
             99-SignalCompletion:
               command: !Sub >-
                 /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PSMPMachine --region ${AWS::Region}
